corrected signup and login spacing and changed login settings order

--- a/src/App.css
+++ b/src/App.css
@@ -308,10 +308,33 @@ span {
   animation-duration: 0.5s
 }
 
+.modalContainerSignup{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 500px;
+  height: 500px;
+  border-radius: 12px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  display: flex;
+  flex-direction: column;
+  padding: 25px;
+  color: black;
+  position: fixed;
+  transform: translateX(-913px);
+  z-index: 1000;
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.5s
+}
+
 input[type="submit"] {
   padding: 12px 20px;
   margin-top: 20px;
-  background-color: #4CAF50;
+  background-color: #020202;
   color: white;
   border: none;
   border-radius: 4px;
@@ -319,7 +342,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-  background-color: #45a049;
+  background-color: #181818;
 }
 
 @-webkit-keyframes animatetop {
@@ -406,8 +429,17 @@ input[type="submit"]:hover {
   text-align: center;
   font-size: 40px;
 }
+.modalContainerSignup .title {
+  text-align: center;
+  font-size: 40px;
+}
+
 
 .modalContainer .loginText {
+  text-align: center;
+}
+
+.modalContainerSignup .loginText {
   text-align: center;
 }
 
